--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    
 </head>
 <body>
    
@@ -11,9 +11,9 @@
         <div class="top"></div>
         <h1>To-Do List</h1>
         <div class="sort-photo">
-            <img src="/project2/photo/Group 34.svg" alt="">
+            <img src="./photo/sortimg1.svg" alt="">
         </div>
-        <ul class="todo-list"></ul>
+        <div class="todo-list"></div>
         <div class="input-container">
             <div><input type="text" placeholder="add someting..."></div>
             <button class="del">
@@ -24,6 +24,7 @@
         </div>
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
