--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <div class="top"></div>
         <h1>To-Do List</h1>
         <div class="sort-photo">
-            <img src="./photo/sortimg1.svg" alt="">
+            <img class="sort1" src="./photo/sortimg1.svg" alt="">
+            <img class="sort2" src="./photo/sortimg3.svg" alt="">
         </div>
-        <div class="todo-list"></div>
+        <ul class="listClass"></ul>
         <div class="input-container">
-            <div><input type="text" placeholder="add someting..."></div>
-            <button class="del">
+            <input type="text" placeholder="add someting..."><button class="del">
             </button>
-        </div>
+            </div>
         <div class="buttons">
-            <button class="button2"><div class="button1">+</div><p>Add</p></button>
+            <button class="button2"><div class="button1">+</div><div class="addtext">Add</div></button>
         </div>
 
     </div>
