--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="listClass"></ul>
         <div class="input-container">
-            <input type="text" placeholder="add someting..."><button class="del">
+            <input type="text" placeholder="Add Something..." ><button class="del">
             </button>
             </div>
         <div class="buttons">
