--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styleMobile.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"
         integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -15,8 +17,8 @@
         <div class="top"></div>
         <h1>To-Do List</h1>
         <div class="sort-photo">
-            <img class="sort1" src="./photo/sortimg1.svg" alt="">
-            <img class="sort2" src="./photo/sortimg3.svg" alt="">
+            <img class="sort1" src="./photo/sortimgDown.svg" alt="">
+            <img class="sort2" src="./photo/sortimgUp.svg" alt="">
         </div>
         <ul class="listClass wrapper"></ul>
         <div class="input-container">
