--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./styleMobile.css">
+    <link rel="stylesheet" href="./styleMob.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"
         integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
-    
+
 </head>
+
 <body>
-   
+
     <div class="block">
         <div class="top"></div>
         <h1>To-Do List</h1>
@@ -22,11 +23,14 @@
         </div>
         <ul class="listClass wrapper"></ul>
         <div class="input-container">
-            <input type="text" placeholder="Add Something..." ><button class="del">
+            <input type="text" placeholder="Add Something..."><button class="del">
             </button>
-            </div>
+        </div>
         <div class="buttons">
-            <button class="button2"><div class="button1">+</div><div class="addtext">Add</div></button>
+            <button class="button2">
+                <div class="button1">+</div>
+                <div class="addtext">Add</div>
+            </button>
         </div>
 
     </div>
