--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./styleMob.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-do-List</title>
+    <link rel="stylesheet" href="./cssFiles/style.css">
+    <link rel="stylesheet" href="./cssFiles/styleMob.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"
         integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
