--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <ul class="listClass wrapper"></ul>
         <div class="input-container">
-            <input type="text" placeholder="Add Something..."><button class="del">
+            <input type="text" placeholder="Add Something..." required autofocus><button class="del">
             </button>
         </div>
         <div class="buttons">
